--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "moment": "^2.24.0",
     "reset-css": "^5.0.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.4.0",
