--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "e2e": "ng e2e",
     "publish": "electron-pdf -p A4 -m 0 http://localhost:4200/ ./Omar-Mirza-Contract-Front-End-Developer.pdf"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged && npm run lint"
+    }
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.7",
@@ -32,7 +37,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.5",
+    "@angular-devkit/build-angular": "^0.900.6",
     "@angular/cli": "~8.3.5",
     "@angular/compiler-cli": "~8.2.7",
     "@angular/language-service": "~8.2.7",
@@ -49,6 +54,8 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "prettier": "^1.19.1",
+    "pretty": "^2.0.0",
+    "pretty-quick": "^2.0.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
