--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "electron-pdf": "^4.0.8",
+    "husky": "^4.2.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
