fixed unit tests, sanitize urls, improved unit tests reporter, swapped protractor for cypress

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --code-coverage=true",
+    "test:ci": "npm run test -- --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
-    "e2e": "ng e2e",
+    "cypress": "cypress run",
+    "cypress-open": "cypress open",
     "publish": "electron-pdf -p A4 -m 0 http://localhost:4200/ ./Omar-Mirza-Contract-Front-End-Developer.pdf"
   },
   "husky": {
@@ -49,14 +51,15 @@
     "husky": "^4.2.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-mocha-reporter": "^2.2.5",
     "prettier": "^2.0.2",
     "pretty-quick": "^2.0.1",
-    "protractor": "~7.0.0",
+    "cypress": "^4.11.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.6"
