--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 7777",
     "build": "ng build",
     "test": "ng test --code-coverage=true",
     "test:ci": "npm run test -- --watch=false --browsers=ChromeHeadless",
