added scss linting config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test --code-coverage=true",
     "test:ci": "npm run test -- --watch=false --browsers=ChromeHeadless",
-    "lint": "ng lint",
+    "lint": "tslint --project tsconfig.json --fix && npm run lint:styles",
+    "lint:styles": "stylelint \"src/**/*.scss\"",
     "cypress": "cypress run",
     "cypress-open": "cypress open",
     "publish": "electron-pdf -p A4 -m 0 http://localhost:7777/ ./Omar-Mirza-Contract-Front-End-Developer.pdf"
@@ -28,14 +29,14 @@
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
     "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "moment": "^2.24.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "moment": "^2.29.1",
     "reset-css": "^5.0.1",
     "roboto-fontface": "^0.10.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "rxjs": "^6.6.3",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
@@ -45,23 +46,26 @@
     "@angular/language-service": "~11.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "electron-pdf": "^4.0.8",
-    "husky": "^4.2.3",
+    "@types/node": "^12.19.9",
+    "codelyzer": "^6.0.1",
+    "cypress": "^4.11.0",
+    "electron-pdf": "^4.0.10",
+    "husky": "^4.3.6",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "karma-mocha-reporter": "^2.2.5",
-    "prettier": "^2.0.2",
-    "pretty-quick": "^2.0.1",
-    "cypress": "^4.11.0",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^2.0.2",
+    "stylelint": "^13.8.0",
+    "stylelint-prettier": "^1.1.2",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~4.0.5"
   }
 }
